start  of screening handlers
