# docs/swagger.yaml
@@ -227,6 +227,17 @@ definitions:
       status:
         type: integer
     type: object
+  requests.StartOfScreening:
+    properties:
+      date_of_start:
+        type: string
+      protocol_id:
+        type: integer
+      subject_num:
+        type: string
+      time_of_start:
+        type: string
+    type: object
   requests.Update:
     properties:
       center_id:
@@ -997,6 +1008,36 @@ paths:
           schema:
             $ref: '#/definitions/responses.Error'
       summary: InformaitonConsentSubject
+      tags:
+      - Subject.Screening
+  /subject/screening/startofscreening:
+    patch:
+      consumes:
+      - application/json
+      description: StartOfScreeningSubject value of subject
+      parameters:
+      - description: StartOfScreening
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/requests.StartOfScreening'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.AddProtocol'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.Error'
+      summary: StartOfScreeningSubject
       tags:
       - Subject.Screening
   /user/all:
